# davinci-resolve-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.es.md  README.md  install.py  pyproject.toml
.github/workflows/: ci.yml
docs/: LIVE_API_DISCOVERY_v20.3.2.9.md  MODULARIZATION.md  PARAMETER_REFERENCE.md  WORKAROUNDS.md  resolve_scripting_api.txt
examples/: 01_timeline_navigation.py  02_add_clips_to_timeline.py  03_scene_detection_and_delete.py  04_color_grading.py  05_render_export.py
scripts/: fix_docstrings.py  inject_enum_docs.py  split_granular.py
src/: resolve_mcp_server.py  server.py
src/granular/: __init__.py  folder.py  gallery.py  graph.py  media_pool.py  media_pool_item.py  media_storage.py  project.py  resolve_control.py  timeline.py  timeline_item.py
src/utils/: app_control.py  cloud_operations.py  layout_presets.py  object_inspection.py  platform.py  project_properties.py
tests/: test_import.py  test_live_api.py
