[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "davinci-resolve-mcp"
version = "2.2.0"
description = "MCP server providing complete coverage of DaVinci Resolve Scripting API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Samuel Gursky"},
]
keywords = ["davinci-resolve", "mcp", "model-context-protocol", "video-editing", "post-production"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
davinci-resolve-mcp = "src.server:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 220
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E402", "F403", "E501", "N813"]  # E402: module-level import (mcp must be defined first), F403: star imports for modularity, E501: legacy long lines, N813: DaVinciResolveScript imported as dvr_script

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
